--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "ni-createRequire-bundle-issue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "pnpm run build:types && pnpm run build:bundle",
+    "build:bundle": "node ./esbuild.config.mjs",
+    "build:types": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@antfu/ni": "^0.23.0",
+    "esbuild": "^0.24.0",
+    "typescript": "^5.6.2"
+  }
 }
